--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,21 @@
         <com.squareup.retrofit2.version>2.4.0</com.squareup.retrofit2.version>
     </properties>
 
+         
+   <dependencyManagement>
+
+        <dependencies>
+            <dependency>
+                <groupId>net.openhft</groupId>
+                <artifactId>third-party-bom</artifactId>
+                <!-- PLEASE DON'T LEAVE THIS ON A SNAPSHOT because they get missed in a release  -->
+                <type>pom</type>
+                <version>3.6.5</version>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+         
     <dependencies>
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
@@ -58,7 +73,6 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
