added -> <plugin>                          <groupId>org.apache.maven.plugins</groupId>                          <artifactId>maven-scm-publish-plugin</artifactId>                          <configuration>                              <checkoutDirectory>${project.build.directory}/scmpublish/javadoc                              </checkoutDirectory>                              <checkinComment>Publishing javadoc for ${project.artifactId}:${project.version}                              </checkinComment>                              <content>${project.reporting.outputDirectory}</content>                              <skipDeletedFiles>true</skipDeletedFiles>                              <pubScmUrl>scm:git:git@github.com:OpenHFT/Binance-Api-Client</pubScmUrl>                              <scmBranch>gh-pages</scmBranch>                          </configuration>                      </plugin>

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>net.openhft</groupId>
-        <artifactId>root-parent-pom</artifactId>
-        <version>1.1.12</version>
+        <artifactId>java-parent-pom</artifactId>
+        <version>1.1.17</version>
         <relativePath/>
     </parent>
 
@@ -74,6 +74,21 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-scm-publish-plugin</artifactId>
+                <configuration>
+                    <checkoutDirectory>${project.build.directory}/scmpublish/javadoc
+                    </checkoutDirectory>
+                    <checkinComment>Publishing javadoc for ${project.artifactId}:${project.version}
+                    </checkinComment>
+                    <content>${project.reporting.outputDirectory}</content>
+                    <skipDeletedFiles>true</skipDeletedFiles>
+                    <pubScmUrl>scm:git:git@github.com:OpenHFT/Binance-Api-Client</pubScmUrl>
+                    <scmBranch>gh-pages</scmBranch>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
          
