corrected ->      scm:git:git@github.com:OpenHFT/Binance-Api-Client.git

--- a/pom.xml
+++ b/pom.xml
@@ -91,11 +91,11 @@
 
         </plugins>
     </build>
-         
+
     <scm>
         <url>scm:git:git@github.com:OpenHFT/Binance-Api-Client.git</url>
         <connection>scm:git:git@github.com:OpenHFT/Binance-Api-Client.git</connection>
-        <developerConnection>scm:git@github.com:OpenHFT/Binance-Api-Client.git
+        <developerConnection>scm:git:git@github.com:OpenHFT/Binance-Api-Client.git
         </developerConnection>
         <tag>master</tag>
     </scm>
