[maven-release-plugin] prepare release binance-api-client-2.17.0

--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>net.openhft</groupId>
         <artifactId>java-parent-pom</artifactId>
         <version>1.1.17</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.openhft.com.binance.api</groupId>
     <artifactId>binance-api-client</artifactId>
-    <version>2.17.0-SNAPSHOT</version>
+    <version>2.17.0</version>
 
     <properties>
         <com.squareup.retrofit2.version>2.4.0</com.squareup.retrofit2.version>
@@ -97,6 +95,6 @@
         <connection>scm:git:git@github.com:OpenHFT/Binance-Api-Client.git</connection>
         <developerConnection>scm:git:git@github.com:OpenHFT/Binance-Api-Client.git
         </developerConnection>
-        <tag>master</tag>
+        <tag>binance-api-client-2.17.0</tag>
     </scm>
 </project>
