--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>net.openhft.com.binance.api</groupId>
     <artifactId>binance-api-client</artifactId>
-    <version>2.17.0</version>
+    <version>2.17.1-SNAPSHOT</version>
 
     <properties>
         <com.squareup.retrofit2.version>2.4.0</com.squareup.retrofit2.version>
@@ -95,6 +95,6 @@
         <connection>scm:git:git@github.com:OpenHFT/Binance-Api-Client.git</connection>
         <developerConnection>scm:git:git@github.com:OpenHFT/Binance-Api-Client.git
         </developerConnection>
-        <tag>binance-api-client-2.17.0</tag>
+        <tag>master</tag>
     </scm>
 </project>
