--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>net.openhft.com.binance.api</groupId>
     <artifactId>binance-api-client</artifactId>
-    <version>2.17.3-SNAPSHOT</version>
+    <version>2.17.4</version>
 
     <properties>
         <com.squareup.retrofit2.version>2.4.0</com.squareup.retrofit2.version>
